--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "express-mongodb-boilerplate",
+  "name": "quant-ux-todo",
   "version": "1.0.0",
-  "description": "Express Mongodb (es6) Boilerplate",
+  "description": "Quant-UX ToDo list demo app",
   "main": "./src/index.js",
   "scripts": {
     "start": "NODE_ENV=development nodemon src/index.js --exec babel-node",
@@ -21,13 +21,13 @@
   },
   "homepage": "https://github.com/KlausSchaefers/feup-node-lecture",
   "dependencies": {
-    "cors": "^2.8.4",
+    "cors": "^2.8.5",
     "express": "^4.16.2",
+    "express-fileupload": "^1.1.6-alpha.5",
     "http-status": "^1.0.1",
     "joi": "^13.1.1",
     "lodash": "^4.17.4",
-    "morgan": "^1.9.0",
-    "sqlite3": "^4.0.6"
+    "morgan": "^1.9.0"
   },
   "keywords": [
     "Node.js",
